# ruinborn

./: .env.example  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.github/: copilot-instructions.md
crates/ruinborn-game/: Cargo.toml
crates/ruinborn-game/data/: asset_catalog.json  enemies.json  zones.json
crates/ruinborn-game/data/goap/: agents.json
crates/ruinborn-game/src/: classes.rs  combat.rs  enemy_archetype.rs  items.rs  lib.rs  market.rs  skills.rs  world.rs
crates/ruinborn-game/src/ai/: boids.rs  mod.rs
crates/ruinborn-protocol/: Cargo.toml
crates/ruinborn-protocol/src/: lib.rs
crates/ruinborn-server/: Cargo.toml  check_errors.txt
crates/ruinborn-server/src/: db.rs  db_sea.rs  main.rs
crates/ruinborn-server/src/entity/: game_meta.rs  market_order.rs  mission_board.rs  mod.rs  player.rs  player_market.rs  trade_history.rs
crates/tradewars-game/: Cargo.toml
crates/tradewars-game/src/: combat.rs  damage.rs  lib.rs  market.rs  progression.rs  skills.rs  world.rs
crates/tradewars-protocol/: Cargo.toml
crates/tradewars-protocol/src/: lib.rs
crates/tradewars-server/: Cargo.toml
crates/tradewars-server/src/: db.rs  db_sea.rs  main.rs
crates/tradewars-server/src/entity/: player_mission.rs  resource_node.rs
docs/: AI.md  ARCHITECTURE.md  DAMAGE_MODEL.md  IDEEN.md  NETWORKING.md  OVERVIEW.md  REFERENCE_VS_SOURCE.md  ZONES.md
scripts/: build_asset_catalog.py  build_npc_atlases.py  convert_flare_atlas.py  rebrand.py  write_market.py  write_store.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  market.rs
src/assets/npc/: flare.ts
src/assets/npc/atlases/: FemaleOld.json  FemalePeasant1.json  FemalePeasant2.json  LuxPriestNpc.json  (+88 more)
src/assets/player_male/: flare.ts
src/assets/spell_icons/: index.ts
src/components/: GameTicker.tsx  GameWorld.tsx  MainMenu.tsx
src/components/ui/: ActionBar.tsx  BagBar.tsx  CharacterView.tsx  ClassSelectModal.tsx  GameMenu.tsx  HUD.tsx  Inventory.tsx  InventoryWindow.tsx  ItemTooltip.tsx  Minimap.tsx  MouseSkillBar.tsx  PortraitBar.tsx  SkillIconView.tsx  SkillTreePanel.tsx  Toast.tsx  TradePanel.tsx  WaypointTravel.tsx  rarity.ts  useCooldownProgress.ts
src/components/world/: Enemies.tsx  FlareSprite.tsx  FollowCamera.tsx  LootDrops.tsx  OtherPlayers.tsx  Player.tsx  RangeIndicator.tsx  Roads.tsx  Terrain.tsx  TradingPostMesh.tsx  Trees.tsx  Water.tsx  Waypoints.tsx  cameraConfig.ts
src/data/: biomes.json  classes.ts  zone_layouts.json
src/services/: wsTransport.ts
src/store/: gameStore.ts
src/styles/: game-menu.css  index.css
src/types/: index.ts
(+82 files in other folders)
