[package]
name = "tradewars"
version = "0.1.0"
description = "TradeWars Desktop Client — thin Tauri wrapper"
authors = ["you"]
edition = "2021"

[lib]
name = "tradewars_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
