[package]
name = "ruinborn-server"
version = "0.1.0"
edition = "2021"
description = "Ruinborn dedicated WebSocket game server"

[[bin]]
name = "ruinborn-server"
path = "src/main.rs"

[dependencies]
ruinborn-game = { path = "../ruinborn-game" }
ruinborn-protocol = { path = "../ruinborn-protocol" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
sea-orm = { version = "1", features = ["sqlx-postgres", "runtime-tokio-rustls", "with-json"] }
dotenvy = "0.15"
